--- a/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-Mac.xcscheme
+++ b/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-Mac.xcscheme
@@ -52,7 +52,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Profile"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
