--- a/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-TV.xcscheme
+++ b/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-TV.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
-               BuildableName = "BigInt-TV.framework"
+               BuildableName = "BigInt.framework"
                BlueprintName = "BigInt-TV"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
@@ -44,7 +44,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
-            BuildableName = "BigInt-TV.framework"
+            BuildableName = "BigInt.framework"
             BlueprintName = "BigInt-TV"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
-            BuildableName = "BigInt-TV.framework"
+            BuildableName = "BigInt.framework"
             BlueprintName = "BigInt-TV"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
@@ -84,7 +84,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
-            BuildableName = "BigInt-TV.framework"
+            BuildableName = "BigInt.framework"
             BlueprintName = "BigInt-TV"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
