--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@
 # It is not an integral part of the project and I'd rather remove it if I could help it.
 
 language: objective-c
-osx_image: xcode7.2    
-xcode_project: BigInt.xcodeproj
-xcode_scheme: BigInt-Mac
-after_success: echo "$TRAVIS_JOB_ID"
+osx_image: xcode7.2
+script: xcrun xcodebuild -project BigInt.xcodeproj -scheme Coverage test
+after_success: bundle exec llvm-coveralls -p BigInt.xcodeproj -s Coverage -t BigInt-Mac
