--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@
 language: objective-c
 osx_image: xcode7.2
 script: xcrun xcodebuild -project BigInt.xcodeproj -scheme Coverage test
-after_success: bundle exec llvm-coveralls -p BigInt.xcodeproj -s Coverage -t BigInt-Mac
+after_success: ./llvm-coveralls -p BigInt.xcodeproj -s Coverage -t BigInt-Mac -c Test
