--- a/api/docsets/BigInt.docset/Contents/Info.plist
+++ b/api/docsets/BigInt.docset/Contents/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleName</key>
       <string>BigInt</string>
     <key>DocSetPlatformFamily</key>
-      <string>jazzy</string>
+      <string>bigint</string>
     <key>isDashDocset</key>
       <true/>
     <key>dashIndexFilePath</key>
