--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ osx_image: xcode8
 script:
 - swift build
 - swift test
+- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-iOS
+- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-Mac
+- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-Watch
+- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-TV
 - xcrun xcodebuild -project BigInt.xcodeproj -scheme Coverage test
 after_success: bash <(curl -s https://codecov.io/bash)
