--- a/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-iOS.xcscheme
+++ b/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB64E6EF1C2F490000C18269"
+               BlueprintIdentifier = "BBB55AB11C8F80020050DDA9"
                BuildableName = "BigInt.framework"
                BlueprintName = "BigInt-iOS"
                ReferencedContainer = "container:BigInt.xcodeproj">
@@ -26,15 +26,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB64E6F91C2F490000C18269"
-               BuildableName = "BigIntTests.xctest"
-               BlueprintName = "BigIntTests-iOS"
+               BlueprintIdentifier = "BBB55ABB1C8F80020050DDA9"
+               BuildableName = "BigInt-Test.xctest"
+               BlueprintName = "BigInt iOS Tests"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,7 +43,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E6EF1C2F490000C18269"
+            BlueprintIdentifier = "BBB55AB11C8F80020050DDA9"
             BuildableName = "BigInt.framework"
             BlueprintName = "BigInt-iOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
@@ -64,7 +65,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E6EF1C2F490000C18269"
+            BlueprintIdentifier = "BBB55AB11C8F80020050DDA9"
             BuildableName = "BigInt.framework"
             BlueprintName = "BigInt-iOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
@@ -82,7 +83,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E6EF1C2F490000C18269"
+            BlueprintIdentifier = "BBB55AB11C8F80020050DDA9"
             BuildableName = "BigInt.framework"
             BlueprintName = "BigInt-iOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
