--- a/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-macOS.xcscheme
+++ b/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,27 +14,28 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
+               BlueprintIdentifier = "BBB55AD31C8F88F20050DDA9"
                BuildableName = "BigInt.framework"
-               BlueprintName = "BigInt-Mac"
+               BlueprintName = "BigInt-macOS"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Profile"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB64E7171C2F49CF00C18269"
-               BuildableName = "BigIntTests-Mac.xctest"
-               BlueprintName = "BigIntTests-Mac"
+               BlueprintIdentifier = "BBB55ADC1C8F88F20050DDA9"
+               BuildableName = "BigInt-Test.xctest"
+               BlueprintName = "BigInt macOS Tests"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +43,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
+            BlueprintIdentifier = "BBB55AD31C8F88F20050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-Mac"
+            BlueprintName = "BigInt-macOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -52,7 +53,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -64,9 +65,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
+            BlueprintIdentifier = "BBB55AD31C8F88F20050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-Mac"
+            BlueprintName = "BigInt-macOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -82,9 +83,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
+            BlueprintIdentifier = "BBB55AD31C8F88F20050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-Mac"
+            BlueprintName = "BigInt-macOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
