--- a/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-tvOS.xcscheme
+++ b/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
+               BlueprintIdentifier = "BBB55AFD1C8F8CBB0050DDA9"
                BuildableName = "BigInt.framework"
-               BlueprintName = "BigInt-TV"
+               BlueprintName = "BigInt-tvOS"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,9 +33,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BBDEA43E1C3D6CCF00BBEEBC"
-               BuildableName = "BigIntTests-TV.xctest"
-               BlueprintName = "BigIntTests-TV"
+               BlueprintIdentifier = "BBB55B061C8F8CBB0050DDA9"
+               BuildableName = "BigInt-Test.xctest"
+               BlueprintName = "BigInt tvOS Tests"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -43,9 +43,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
+            BlueprintIdentifier = "BBB55AFD1C8F8CBB0050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-TV"
+            BlueprintName = "BigInt-tvOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -53,7 +53,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -65,9 +65,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
+            BlueprintIdentifier = "BBB55AFD1C8F8CBB0050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-TV"
+            BlueprintName = "BigInt-tvOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,9 +83,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BBDEA4351C3D6CCE00BBEEBC"
+            BlueprintIdentifier = "BBB55AFD1C8F8CBB0050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-TV"
+            BlueprintName = "BigInt-tvOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
