--- a/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-watchOS.xcscheme
+++ b/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-watchOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
+               BlueprintIdentifier = "BBB55AF01C8F8BE00050DDA9"
                BuildableName = "BigInt.framework"
-               BlueprintName = "BigInt-Mac"
+               BlueprintName = "BigInt-watchOS"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,31 +29,12 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       codeCoverageEnabled = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB64E7171C2F49CF00C18269"
-               BuildableName = "BigIntTests-Mac.xctest"
-               BlueprintName = "BigIntTests-Mac"
-               ReferencedContainer = "container:BigInt.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
-            BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-Mac"
-            ReferencedContainer = "container:BigInt.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -65,9 +46,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
+            BlueprintIdentifier = "BBB55AF01C8F8BE00050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-Mac"
+            BlueprintName = "BigInt-watchOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,9 +64,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BB64E70E1C2F49CF00C18269"
+            BlueprintIdentifier = "BBB55AF01C8F8BE00050DDA9"
             BuildableName = "BigInt.framework"
-            BlueprintName = "BigInt-Mac"
+            BlueprintName = "BigInt-watchOS"
             ReferencedContainer = "container:BigInt.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
