--- a/version.xcconfig
+++ b/version.xcconfig
@@ -1,2 +1,13 @@
+// Increment the build number whenever you modify the version string.
 VERSION_STRING = 2.1.0
 BUILD_NUMBER = 4
+
+PROJECT_NAME = BigInt
+BUNDLE_IDENTIFIER_BASE = hu.lorentey.$(PROJECT_NAME)
+
+IPHONEOS_DEPLOYMENT_TARGET = 9.0
+MACOSX_DEPLOYMENT_TARGET = 10.10
+WATCHOS_DEPLOYMENT_TARGET = 2.0
+TVOS_DEPLOYMENT_TARGET = 9.0
+
+APPLICATION_EXTENSION_API_ONLY = YES
