--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ osx_image: xcode8.1sneakpeek
 script:
 - swift build
 - swift test
-- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-macOS test
-- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-iOS
-- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-watchOS
-- xcrun xcodebuild -project BigInt.xcodeproj -scheme BigInt-tvOS
+- xcrun xcodebuild -workspace BigInt.xcworkspace -scheme BigInt-macOS test
+- xcrun xcodebuild -workspace BigInt.xcworkspace -scheme BigInt-iOS
+- xcrun xcodebuild -workspace BigInt.xcworkspace -scheme BigInt-watchOS
+- xcrun xcodebuild -workspace BigInt.xcworkspace -scheme BigInt-tvOS
 after_success: bash <(curl -s https://codecov.io/bash)
