--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Carthage/Checkouts/SipHash"]
 	path = Carthage/Checkouts/SipHash
-	url = https://github.com/lorentey/SipHash.git
+	url = https://github.com/attaswift/SipHash.git
