Change bundle identifier to org.attaswift.*

--- a/version.xcconfig
+++ b/version.xcconfig
@@ -3,7 +3,7 @@ VERSION_STRING = 2.2.0
 BUILD_NUMBER = 7
 
 PROJECT_NAME = BigInt
-BUNDLE_IDENTIFIER_BASE = hu.lorentey.$(PROJECT_NAME)
+BUNDLE_IDENTIFIER_BASE = org.attaswift.$(PROJECT_NAME)
 
 IPHONEOS_DEPLOYMENT_TARGET = 8.0
 MACOSX_DEPLOYMENT_TARGET = 10.9
