--- a/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-Package.xcscheme
+++ b/BigInt.xcodeproj/xcshareddata/xcschemes/BigInt-Package.xcscheme
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1020"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BigInt::BigInt"
+               BuildableName = "BigInt.framework"
+               BlueprintName = "BigInt"
+               ReferencedContainer = "container:BigInt.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      disableMainThreadChecker = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BB241C601DDB70B00067F917"
-               BuildableName = "BigInt Benchmark.xctest"
-               BlueprintName = "BigInt Benchmark"
+               BlueprintIdentifier = "BigInt::BigIntTests"
+               BuildableName = "BigIntTests.xctest"
+               BlueprintName = "BigIntTests"
                ReferencedContainer = "container:BigInt.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -28,7 +43,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -37,6 +52,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BigInt::BigInt"
+            BuildableName = "BigInt.framework"
+            BlueprintName = "BigInt"
+            ReferencedContainer = "container:BigInt.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
