--- a/.jazzy.yml
+++ b/.jazzy.yml
@@ -4,5 +4,5 @@ theme: fullwidth
 output: ./docs
 author_url: "https://twitter.com/lorentey"
 github_url: "https://github.com/attaswift/BigInt"
-root-url: "https://attaswift.github.io/BigInt/reference/" 
-xcodebuild-arguments: "-workspace,BigInt.xcworkspace,-scheme,BigInt-macOS"
+root_url: "https://attaswift.github.io/BigInt/reference/" 
+xcodebuild_arguments: ["-workspace", "BigInt.xcworkspace", "-scheme", "BigInt-macOS"]
