--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Build
       run: swift build --build-tests
     - name: Run tests
-      run: swift test
+      run: swift test --parallel
   xcode:
     runs-on: macos-latest
     strategy:
@@ -36,7 +36,7 @@ jobs:
     - name: Build
       run: swift build --build-tests --enable-test-discovery
     - name: Test
-      run: swift test --enable-test-discovery
+      run: swift test --parallel --enable-test-discovery
   codecov:
     runs-on: macos-latest
     steps:
