--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,44 +4,36 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
    
 jobs:
   macos:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Build
       run: swift build --build-tests
     - name: Run tests
-      run: swift test
-  xcode:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        scheme: [BigInt-macOS, BigInt-iOS, BigInt-watchOS, BigInt-tvOS]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        run: xcrun xcodebuild -workspace BigInt.xcworkspace -scheme ${{ matrix.scheme }}
+      run: swift test --parallel
+
   linux:
     container:
       image: swift:${{ matrix.linux }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        linux: [bionic, xenial, focal]
+        linux: [focal, jammy, noble]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Build
       run: swift build --build-tests --enable-test-discovery
     - name: Test
-      run: swift test --enable-test-discovery
-  codecov:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Test and generate code coverage report
-      run: xcrun xcodebuild -workspace BigInt.xcworkspace -scheme BigInt-macOS test
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      run: swift test --enable-test-discovery --parallel
+      
+  # codecov:
+  #   runs-on: macos-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - name: Test and generate code coverage report
+  #     run: swift test --enable-code-coverage
+  #   - name: Upload coverage to Codecov
+  #     uses: codecov/codecov-action@v4
