--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -30,7 +30,7 @@ jobs:
       run: swift test --enable-test-discovery --parallel
       
   android:
-    runs-on: ubuntu-latest
+    runs-on: macos-13
     steps:
       - name: Checkout
         uses: actions/checkout@v4
