--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -29,6 +29,16 @@ jobs:
     - name: Test
       run: swift test --enable-test-discovery --parallel
       
+  android:
+    runs-on: macos-13
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Environment
+        run: echo "ANDROID_NDK_HOME=${HOME}/Library/Android/sdk/ndk/27.2.12479018" >> $GITHUB_ENV
+      - name: Test
+        uses: skiptools/swift-android-action@v2
+
   # codecov:
   #   runs-on: macos-latest
   #   steps:
