Add checks for Swift 6 support and fix concurrency warnings

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -25,9 +25,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: swift build --build-tests --enable-test-discovery
+      run: swift build --build-tests --enable-test-discovery -Xswiftc -strict-concurrency=complete
     - name: Test
-      run: swift test --enable-test-discovery --parallel
+      run: swift test --enable-test-discovery --parallel -Xswiftc -strict-concurrency=complete
       
   android:
     runs-on: macos-13
